# wasm-wallet

./: README.md
extension-chrome/: .eslintrc.json  .gitignore  .prettierrc  package.json  tsconfig.json  webpack.config.ts
extension-chrome/public/: manifest.json  options.html  popup.html
extension-chrome/src/background/: index.ts  service_worker.ts
extension-chrome/src/options/: Options.tsx  index.tsx
extension-chrome/src/popup/: App.tsx  Popup.tsx  index.tsx
extension-chrome/src/popup/components/: Button.tsx  Error.tsx  Input.tsx  Mnemonic.tsx  Select.tsx
extension-chrome/src/popup/pages/: Accounts.tsx  AddMasterAccount.tsx  Mnemonic.tsx
extension-chrome/src/state/: actions.ts  context.ts  reducer.ts  state.ts
extension-chrome/src/types/: accounts.ts  index.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
