[package]
name = "wasm-wallet"
version = "0.1.0"
authors = ["Justin Evans <jurevans@gmail.com>"]
description = "A WASM Crypto Wallet built in Rust"
license = "MIT"
edition = "2018"
repository = "https://github.com/jurevans/wasm-wallet/"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

bitcoin-wallet = { git = "https://github.com/jurevans/rust-wallet/", rev = "99e2fd99d078dfdade3699ba5b4ffadd684f0464" }
# bitcoin-wallet = { path = "/home/jurev/dev/rust-wallet", features = ["serde"]}

console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
